ELS Code/main/default/objects/Campaign_Reservation_Junction__c/Campaign_Reservation_Junction__c.object-meta.xml
<CustomObject>
    <label>Campaign Reservation Junction</label>
    <nameField>
        <label>Campaign Reservation Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Reservation Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>