ELS Code/main/default/objects/Campaign_Reservation_Junction__c/fields/Promo_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_Number__c</fullName>
    <label>Promo Code Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>