ELS Code/main/default/objects/Campaign_Reservation_Junction__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <label>Reservation</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Campaign Reservation Junctions</relationshipLabel>
    <relationshipName>Campaign_Reservation_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>