ELS Code/main/default/objects/Campaign_Reservation_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Revenue__c</columns>
    <columns>Revenue_Type__c</columns>
    <columns>Reservation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>Fall Flash Sale - Public</value>
    </filters>
    <filters>
        <field>Revenue_Type__c</field>
        <operation>equals</operation>
        <value>Direct</value>
    </filters>
    <label>All</label>
</ListView>